<resources>
    <string name="app_name">QuizGilang</string>
    <string name="quiz">Quiz Mobile Programming</string>
    <string name="identity">Nama : Gilang Nur Rizki\n NIM : 22552011037\n Kelas : TIF 222PC</string>
    <string name="get_started">Get Started</string>
    <string name="registrasi_penduduk">Registrasi Penduduk</string>
    <string name="masukan_nik">Masukan NIK</string>
    <string name="masukan_nama">Masukan Nama</string>
    <string name="pilih_jenis_kelamin">Pilih Jenis kelamin</string>
    <string name="laki_laki">Laki-laki</string>
    <string name="perempuan">Perempuan</string>
    <string name="masukan_tempat_lahir">Masukan Tempat Lahir</string>
    <string name="masukan_tanggal_lahir">Masukan Tanggal Lahir</string>
    <string name="alamat">Masukan Alamat</string>
    <string name="masukan_email">Masukan Email</string>
    <string name="masukan_nomor_telepon">Masukan Nomor telepon</string>
    <string name="submit">Submit</string>
    <string name="detail_penduduk">Detail Penduduk</string>
</resources>