<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/background">

    <ImageView
        android:id="@+id/img1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/gambar1"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"/>


    <ImageView
        android:id="@+id/img2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/gambar2"
        android:layout_below="@+id/img1"
        android:layout_marginTop="50sp"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/txt1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/img2"
        android:text="@string/quiz"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20sp"
        android:fontFamily="@font/poppinssemibold"
        android:textSize="18sp"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/txt2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt1"
        android:text="@string/identity"
        android:padding="20dp"
        android:gravity="center"
        android:fontFamily="@font/poppinsregular"
        android:textColor="@color/black"/>
    
    <Button
        android:id="@+id/btn_started"
        android:layout_marginTop="20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt2"
        android:layout_centerHorizontal="true"
        android:width="300dp"
        android:textColor="@color/white"
        android:background="@drawable/button_shape"
        android:text="@string/get_started"
        android:textSize="14sp"
        android:fontFamily="@font/poppinsbold"/>

</RelativeLayout>